--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.18",
     "react": "18.3.1",
     "react-native": "0.75.4",
-    "react-native-vision-camera": "^4.5.3"
+    "react-native-reanimated": "^3.16.1",
+    "react-native-vision-camera": "^4.6.0",
+    "react-native-worklets-core": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
